kustomization/dify-api/services.yaml
---
# DIFY API SERVICE
apiVersion: v1
kind: Service
metadata:
  name: dify-api
spec:
  ports:
    - port: 5001
      targetPort: 5001
      protocol: TCP
      name: dify-api
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dify-api
    app.kubernetes.io/instance: dify-api
